--- a/organization-service-dev.properties
+++ b/organization-service-dev.properties
@@ -16,8 +16,13 @@ server.port= 8081
 
 spring.cloud.loadbalancer.ribbon.enabled = false
         
+#management.endpoints.web.exposure.include=*
+#management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.cors.allowed-origins=true
+management.endpoint.health.show-details=always
 
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
