--- a/organization-service.properties
+++ b/organization-service.properties
@@ -1,3 +1,4 @@
+example.property= I am the default
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
@@ -12,8 +13,13 @@ server.port= 8081
 
 spring.cloud.loadbalancer.ribbon.enabled = false
         
+#management.endpoints.web.exposure.include=*
+#management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.cors.allowed-origins=true
+management.endpoint.health.show-details=always
 
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
