--- a/ecom-configs/cart-item.properties
+++ b/ecom-configs/cart-item.properties
@@ -28,8 +28,13 @@ eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
 #keycloak.bearer-only = true
 spring.cloud.loadbalancer.ribbon.enabled = false
         
+#management.endpoints.web.exposure.include=*
+#management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.cors.allowed-origins=true
+management.endpoint.health.show-details=always
 spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
 spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
 spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
