--- a/ecom-configs/order-dev.properties
+++ b/ecom-configs/order-dev.properties
@@ -28,8 +28,13 @@ eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
 
 spring.cloud.loadbalancer.ribbon.enabled = false
         
+#management.endpoints.web.exposure.include=*
+#management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.cors.allowed-origins=true
+management.endpoint.health.show-details=always
 spring.cloud.stream.bindings.output.destination=orgChangeTopic
 spring.cloud.stream.bindings.output.content-type=application/json
 spring.cloud.stream.kafka.binder.zkNodes=kafka
