--- a/ecom-configs/cart-item-dev.properties
+++ b/ecom-configs/cart-item-dev.properties
@@ -43,9 +43,13 @@ spring.cloud.stream.kafka.binder.zkNodes= kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
 
 
+
 spring.zipkin.baseUrl:http://3.144.17.1:9411/
 spring.sleuth.sampler.percentage: 1
 
 #redis.server = redis
 redis.server = redis-001.xq06os.0001.use2.cache.amazonaws.com:6379
 redis.port = 6379
+
+logstash.host= http://3.144.17.1:5000
+logging.config=classpath:logback-delayed.xml
