--- a/ecom-configs/catalog-dev.properties
+++ b/ecom-configs/catalog-dev.properties
@@ -1,5 +1,7 @@
 example.property= I AM THE DEV
-spring.datasource.url=jdbc:postgresql://database-catalog:5432/catalog-db
+#spring.datasource.url=jdbc:postgresql://database-catalog:5432/catalog-db
+spring.datasource.url=jdbc:postgresql://catalog-db.cr9bywetmpv9.us-east-2.rds.amazonaws.com/catalog-db
+
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql = true
@@ -41,8 +43,13 @@ spring.cloud.stream.kafka.binder.zkNodes= kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
 
 
-spring.zipkin.baseUrl:http://zipkin:9411
+#spring.zipkin.baseUrl:http://zipkin:9411
+spring.zipkin.baseUrl:http://3.144.17.1:9411/zipkin/
 spring.sleuth.sampler.percentage: 1
 
-redis.server = redis
+#redis.server = redis
+redis.server = redis-001.xq06os.0001.use2.cache.amazonaws.com:6379
 redis.port = 6379
+
+logstash.host= http://3.144.17.1:5000
+logging.config=classpath:logback-delayed.xml
