--- a/ecom-configs/cart-item-dev.properties
+++ b/ecom-configs/cart-item-dev.properties
@@ -1,7 +1,7 @@
 example.property= I AM THE DEV
 catalog.service.url=http://localhost:8086
 #spring.datasource.url=jdbc:postgresql://database-cart-item:5432/cart-item-db
-spring.datasource.url=jdbc:postgresql://catalog-db.cr9bywetmpv9.us-east-2.rds.amazonaws.com/cart-item-db
+spring.datasource.url=jdbc:postgresql://database-cart-item.cr9bywetmpv9.us-east-2.rds.amazonaws.com/cart-item-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql = true
