--- a/ecom-configs/gateway-server-dev.yml
+++ b/ecom-configs/gateway-server-dev.yml
@@ -77,5 +77,8 @@ management:
     web:
       exposure:
         include: "*"
-        
+logstash:
+  host: http://3.144.17.1:5000
+logging:
+  config: classpath:logback-delayed.xml
         
