--- a/ecom-configs/cart-item.properties
+++ b/ecom-configs/cart-item.properties
@@ -1,6 +1,7 @@
-example.property= I AM THE DEFAULT
-catalog.service.url=http://catalog:8086
-spring.datasource.url=jdbc:postgresql://database-cart-item:5432/cart-item-db
+example.property= I AM THE Default
+catalog.service.url=http://localhost:8086
+#spring.datasource.url=jdbc:postgresql://database-cart-item:5432/cart-item-db
+spring.datasource.url=jdbc:postgresql://database-cart-item.cr9bywetmpv9.us-east-2.rds.amazonaws.com/cart-item-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql = true
@@ -42,8 +43,13 @@ spring.cloud.stream.kafka.binder.zkNodes= kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
 
 
-spring.zipkin.baseUrl:http://zipkin:9411
+
+spring.zipkin.baseUrl:http://3.144.17.1:9411/
 spring.sleuth.sampler.percentage: 1
 
-redis.server = redis
+#redis.server = redis
+redis.server = redis-001.xq06os.0001.use2.cache.amazonaws.com:6379
 redis.port = 6379
+
+logstash.host= http://3.144.17.1:5000
+logging.config=classpath:logback-delayed.xml
