--- a/ecom-configs/catalog-prod.properties
+++ b/ecom-configs/catalog-prod.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:postgresql://database-catalog:5432/catalog-db
+example.property= I AM THE Default
+#spring.datasource.url=jdbc:postgresql://database-catalog:5432/catalog-db
+spring.datasource.url=jdbc:postgresql://catalog-db.cr9bywetmpv9.us-east-2.rds.amazonaws.com/catalog-db
+
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql = true
@@ -10,9 +13,43 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
-server.port=8080
-catalog.service.url=http://catalog:8080
+server.port=8086
+catalog.service.url=http://catalog:8086
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
+eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
+#eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
+#keycloak.realm = ecommerce-realm
+#keycloak.auth-server-url = http://keycloak:8080/auth
+#keycloak.ssl-required = external
+#keycloak.resource = ecommerce
+#keycloak.credentials.secret = WL9dmLQcjvwcbXv3Qrq0fA8GDUVZ01kt
+#keycloak.use-resource-role-mappings = true
+#keycloak.bearer-only = true
+spring.cloud.loadbalancer.ribbon.enabled = false
+        
+#management.endpoints.web.exposure.include=*
+#management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
+management.endpoints.enabled-by-default=true
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.cors.allowed-origins=true
+management.endpoint.health.show-details=always
+spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
+spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
+spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
+spring.cloud.stream.kafka.binder.zkNodes= kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
+
+
+#spring.zipkin.baseUrl:http://zipkin:9411
+spring.zipkin.baseUrl:http://3.144.17.1:9411/zipkin/
+spring.sleuth.sampler.percentage: 1
+
+#redis.server = redis
+redis.server = redis-001.xq06os.0001.use2.cache.amazonaws.com:6379
+redis.port = 6379
+
+logstash.host= http://3.144.17.1:5000
+logging.config=classpath:logback-delayed.xml
