--- a/ecom-configs/order-prod.properties
+++ b/ecom-configs/order-prod.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:postgresql://database-order:5432/order-db
+example.property= I AM THE default
+#spring.datasource.url=jdbc:postgresql://database-order:5432/order-db
+spring.datasource.url=jdbc:postgresql://database-order.cr9bywetmpv9.us-east-2.rds.amazonaws.com/order-db
+
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql = true
@@ -15,4 +18,36 @@ cart.service.url=http://cart-item:8082
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
+eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
+#eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
+#keycloak.realm = ecommerce-realm
+#keycloak.auth-server-url = http://keycloak:8080/auth
+#keycloak.ssl-required = external
+#keycloak.resource = ecommerce
+#keycloak.credentials.secret = hr7uR5bLgy5zp8D2y6brRgeMkPwi9oON
+#keycloak.use-resource-role-mappings = true
+#keycloak.bearer-only = true
+
+spring.cloud.loadbalancer.ribbon.enabled = false
+        
+#management.endpoints.web.exposure.include=*
+#management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
+management.endpoints.enabled-by-default=true
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.cors.allowed-origins=true
+management.endpoint.health.show-details=always
+spring.cloud.stream.bindings.output.destination=orgChangeTopic
+spring.cloud.stream.bindings.output.content-type=application/json
+spring.cloud.stream.kafka.binder.zkNodes=kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
+
+#spring.zipkin.baseUrl:http://zipkin:9411
+spring.zipkin.baseUrl: http://3.144.17.1:9411/zipkin/
+spring.sleuth.sampler.percentage: 1
+#redis.server = redis
+redis.server = redis-001.xq06os.0001.use2.cache.amazonaws.com:6379
+redis.port = 6379
+
+logstash.host= http://3.144.17.1:5000
+logging.config=classpath:logback-delayed.xml
