--- a/ecom-configs/cart-item.properties
+++ b/ecom-configs/cart-item.properties
@@ -32,9 +32,9 @@ spring.cloud.loadbalancer.ribbon.enabled = false
 #management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
-management.endpoints.jmx.exposure.include=*
-management.endpoints.web.cors.allowed-origins=true
-management.endpoint.health.show-details=always
+#management.endpoints.jmx.exposure.include=*
+#management.endpoints.web.cors.allowed-origins=true
+#management.endpoint.health.show-details=always
 spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
 spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
 spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
